# Manipulate-Memory

./: CHANGELOG.md  CMakeLists.txt  README.md
CMake/: add_dependencies.cmake  add_sources_to_target.cmake  configure_project_version.cmake  create_library.cmake  export_rules.cmake  generate_export_header.cmake  include_tests.cmake  package_configuration.cmake  set_build_output_directories.cmake  set_build_postfixes.cmake  set_c_standard.cmake  set_compiler_warnings.cmake  set_include_directories.cmake  set_install_directories.cmake  setup_project.cmake  validate_build_config.cmake
Configuration/: config-shared.cmake.in  config-static.cmake.in  configure_version.h.in
Examples/: CMakeLists.txt  example-001-copy.c  example-001.c
Scripts/: build-all-configs.bat  build-all.bat  build-configs.bat  build.bat  clean-all.bat  clean.bat  configure-all.bat  configure.bat  test-all-configs.bat  test-all.bat  test-configs.bat  test.bat
Sources/include/manipulate_memory/: manipulate_memory.h
Sources/src/manipulate_memory/: alignment.c  alignment.h  copy.c  copy.h  manipulate_memory.c  utility.h
Tests/: CMakeLists.txt  kdi_copy_memory.c  kdi_manipulate_memory_copy.c  kdi_manipulate_memory_move.c  kdi_move_memory.c
